<resources>
    <string name="app_name">MyCollection</string>
    <string name="olvid_mi_contrase_a">Olvidé mi contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="registrarse">Registrarse</string>
    <string name="contrase_a">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="my_collection_inventory">My Collection Inventory</string>
    <string name="crear_usuario">Crear Usuario</string>
    <string name="nombre">Nombre</string>
    <string name="repetir_contrase_a">Repetir contraseña</string>
    <string name="e_mail">E-Mail</string>
    <string name="registrar">Registrar</string>
    <string name="titulo_de_la_coleccion">Titulo de la Coleccion</string>
    <string name="nueva_coleccion">Nueva Coleccion</string>
    <string name="descripcion">Descripcion</string>
    <string name="crear">Crear</string>
    <string name="cancelar">Cancelar</string>
    <string name="Agregar">Agregar</string>
    <string name="camara">Camara</string>
    <string name="guardar">Guardar</string>
    <string name="nuevo_item">Nuevo Item</string>
    <string name="a_o_de_origen">Año de origen</string>
    <string name="pais_de_origen">Pais de origen</string>
    <string name="idcoleccion">idcoleccion</string>
    <string name="galeria">Galeria</string>
</resources>