<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".RegistroActivity">

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="134dp"
            android:text="@string/registrar"
            android:textColor="@color/white"
            app:backgroundTint="@color/black"
            app:iconTint="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/btnCancelarReg"
            app:layout_constraintHorizontal_bias="0.866"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ETEmail" />

        <TextView
            android:id="@+id/TVCrearUsuario"
            android:layout_width="260dp"
            android:layout_height="46dp"
            android:layout_marginTop="36dp"
            android:text="@string/crear_usuario"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/ETNombre"
            android:layout_width="322dp"
            android:layout_height="50dp"
            android:layout_marginTop="60dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:textAlignment="gravity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TVCrearUsuario" />

        <EditText
            android:id="@+id/ETUsuario2"
            android:layout_width="322dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/usuario"
            android:inputType="textPersonName"
            android:textAlignment="gravity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ETNombre" />

        <EditText
            android:id="@+id/ETPassword2"
            android:layout_width="322dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:textAlignment="gravity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ETUsuario2" />

        <EditText
            android:id="@+id/ETRepetirPass"
            android:layout_width="322dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/repetir_contrase_a"
            android:inputType="textPassword"
            android:textAlignment="gravity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ETPassword2" />

        <EditText
            android:id="@+id/ETEmail"
            android:layout_width="322dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:textAlignment="gravity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ETRepetirPass" />

        <Button
            android:id="@+id/btnCancelarReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="44dp"
            android:text="@string/cancelar"
            android:textColor="@color/white"
            app:backgroundTint="@color/black"
            app:iconTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ETEmail" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


