<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".NuevaColeccion">


        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="72dp"
            android:fontFamily="@font/questrial"
            android:text="@string/titulo_de_la_coleccion"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/etTitulo"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNuevaColeccion" />

        <EditText
            android:id="@+id/etTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:fontFamily="@font/questrial"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNuevaColeccion" />

        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/questrial"
            android:text="@string/descripcion"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/etDescripcion"
            app:layout_constraintHorizontal_bias="0.408"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="205dp"
            android:layout_height="150dp"
            android:layout_marginTop="40dp"
            android:contentDescription="Portada de la Coleccion"
            app:layout_constraintEnd_toStartOf="@+id/galleryBtn"
            app:layout_constraintHorizontal_bias="0.232"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etTitulo"
            tools:srcCompat="@tools:sample/avatars" />

        <EditText
            android:id="@+id/etDescripcion"
            android:layout_width="246dp"
            android:layout_height="80dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="160dp"
            android:ems="10"
            android:fontFamily="@font/questrial"
            android:gravity="start|top"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnCrear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/crear"
        android:textColor="@color/white"
        app:backgroundTint="@color/black"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.381"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <Button
        android:id="@+id/btnCancelarCol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/cancelar"
        android:textColor="@color/white"
        app:backgroundTint="@color/black"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.572"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
            android:id="@+id/tvNuevaColeccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/questrial"
            android:text="@string/nueva_coleccion"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="205dp" />

        <TextView
            android:id="@+id/tvId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:fontFamily="@font/questrial"
            android:text="id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNuevaColeccion" />

        <ImageButton
            android:id="@+id/galleryBtn"
            android:layout_width="146dp"
            android:layout_height="79dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="32dp"
            android:background="@color/white"
            android:src="@drawable/galeria"
            app:layout_constraintBottom_toTopOf="@+id/camBtn"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/camBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="56dp"
            android:layout_marginBottom="48dp"
            android:text="Camara"
            android:textColor="@color/white"
            app:backgroundTint="@color/black"
            app:iconTint="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/etDescripcion"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

